--- a/SeminarsHomework.csproj
+++ b/SeminarsHomework.csproj
@@ -11,6 +11,9 @@
     <Compile Update="Homework2.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Homework3.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
 </Project>
