--- a/SeminarsHomework.csproj
+++ b/SeminarsHomework.csproj
@@ -14,6 +14,9 @@
     <Compile Update="Homework3.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Homework4.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
 </Project>
