--- a/SeminarsHomework.csproj
+++ b/SeminarsHomework.csproj
@@ -26,6 +26,9 @@
     <Compile Update="Homework6.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Homework7.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="RunMyHomeworks.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
