--- a/SeminarsHomework.csproj
+++ b/SeminarsHomework.csproj
@@ -29,6 +29,9 @@
     <Compile Update="Homework7.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Homework8.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="RunMyHomeworks.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
