--- a/SeminarsHomework.csproj
+++ b/SeminarsHomework.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Update="Exam.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="Homework1.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
